--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "multer": "^1.3.0",
     "parse-glob": "^3.0.4",
     "path": "^0.12.7",
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
   },
