--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cs5610-assignments",
+  "name": "cs5610-project",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -21,11 +21,13 @@
     "@angular/platform-browser": "^4.4.6",
     "@angular/platform-browser-dynamic": "^4.4.6",
     "@angular/router": "^4.4.6",
-    "bcrypt": "^1.0.3",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.2",
     "bootstrap": "^3.3.7",
+    "cookie-parser": "^1.4.3",
     "core-js": "^2.5.1",
     "express": "^4.16.2",
+    "express-session": "^1.15.6",
     "http": "0.0.0",
     "mongoose": "^4.13.6",
     "multer": "^1.3.0",
@@ -36,7 +38,7 @@
     "path": "^0.12.7",
     "request": "^2.83.0",
     "request-promise": "^4.2.2",
-    "rxjs": "^5.5.2",
+    "rxjs": "5.5.2",
     "zone.js": "^0.8.18"
   },
   "devDependencies": {
